--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DIRECTUS_PORT=5000
-CORS_ORIGIN=https://biggbell.mysave.app
-PUBLIC_URL=https://api.biggbell.mysave.app
+# DIRECTUS_PORT=5000
+# CORS_ORIGIN=https://biggbell.mysave.app
+# PUBLIC_URL=https://api.biggbell.mysave.app
